fix center alignment and stimulus methods for side bar

--- a/app/assets/stylesheets/components/_side-navbar.scss
+++ b/app/assets/stylesheets/components/_side-navbar.scss
@@ -30,6 +30,7 @@
 
   h4:hover {
     color: $midnight-green-eagle-green;
+    cursor: pointer;
   }
 }
 
